--- a/index.html
+++ b/index.html
@@ -206,6 +206,18 @@
                </div>
                <!-- <p></p> -->
             </div>
+            <div class="item-content">
+               <div class="title">
+                  <div class="col left">
+                     Ngôn Ngữ
+                  </div>
+               </div>
+               <div class="item-content">
+                  <li>Tiếng Anh: Bằng A | Có khả năng giao tiếp khá</li>
+                  <li>Tiếng Nhật: Bằng N4 JLPT</li>
+               </div>
+               <!-- <p></p> -->
+            </div>
          </div>
          <div class="items">
             <div class="wrapper-icon">
