--- a/index.html
+++ b/index.html
@@ -109,6 +109,13 @@
          height: 16px;
          width: 16px;
       }
+      a{
+          text-decoration: none;
+          color: black;
+      }
+      a:hover{
+          background-color: rgb(28, 85, 181);
+      }
    </style>
 </head>
 
@@ -121,7 +128,7 @@
             </div>
 
             <div class="info">
-               <h2>Le Hoang Tam</h2>
+               <h2>Lê Hoàng Tâm</h2>
                <p>JAVA developer</p>
             </div>
 
@@ -136,11 +143,12 @@
                   <div>
                      <img src="imgs/w-close-envelope.png">
                   </div>
-                  <span>tamb1304723@gmail.com</span>
+                  <!-- <span>tamb1304723@gmail.com</span> -->
+                  <span><a href="mailto:tamb1304723@gmail.com?Subject=Hello%20again" target="_top">tamb1304723@gmail.com</a></span>
                </div>
                <div class="infor-icon">
                   <div><img src="imgs/w-facebook-logo.png"></div>
-                  <span>www.fb.com/tamlh0</span>
+                  <span><a href="www.fb.com/tamlh0">fb.com/tamlh0</a></span>
                </div>
             </div>
             <div class="col col-6  content">
@@ -400,23 +408,7 @@
 
             </div>
          </div>
-         <!-- <div class="items">
-                <div class="wrapper-icon">
-                    <div class="icon">
-                        <img src="./imgs/trophy-cup-silhouette.png" alt="">
-                    </div>
-                    <div class="point"></div>
-                </div>
-                <div class="item-header">
-                    <h2>Giải thưởng</h2>
-                </div>
-                <div class="item-content">
-                    <p>
-                        Learning new languages and technologies is what I am passionate about (I self-taught Django with 3 weeks). I am considered a team-player because I like to help other and tend to work well within groups. I can also do some mentoring tasks and do code reviewing
-                        for other team members.
-                    </p>
-                </div>
-            </div> -->
+
       </div>
    </div>
 </body>
