--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                    </div>
                    <div class="item-content">
                       <!-- <ul style="margin-left: 20px; padding: 10px;"> -->
-                      <li>Trở thành Teach Lead trong 1 năm</li>
+                      <li>Trở thành Technical Leader trong 1 năm</li>
                       <li>Đi Nhật để hoàn thiện hơn về kiến thức lẫn khả năng Lãnh Đạo</li>
                       <!-- </ul> -->
                    </div>
